--- a/public/components/views/modal-new-book-tpl.html
+++ b/public/components/views/modal-new-book-tpl.html
@@ -28,11 +28,11 @@
                         </accordion-item>
 
                         <accordion-item title="What's it called?">
-                            <h3 class="ui green header"><i class="bookmark icon"></i> Name your book, and give the synopsis</h3>
+                            <h3 class="ui green header"><i class="bookmark icon"></i> Give your new book a title</h3>
 
                             <div class="ui form">
                                 <semantic-textbox placeholder="My Fancy Book Title" ng-model="book.title" required></semantic-textbox>
-                                <semantic-textarea placeholder="My book is about {{ book.filter.group | displayTitle }}" ng-model="book.description" required></semantic-textarea>
+                                <!--<semantic-textarea placeholder="My book is about {{ book.filter.group | displayTitle }}" ng-model="book.description" required></semantic-textarea>-->
                             </div>
                         </accordion-item>
 
