--- a/public/components/views/modal-view-book-tpl.html
+++ b/public/components/views/modal-view-book-tpl.html
@@ -34,4 +34,8 @@
         <br/>
 
     </div>
+    <!-- preload images -->
+    <div style="display:none">
+        <img src="{{ image }}" ng-repeat="image in book.images"/>
+    </div>
 </div>
